tests/ui/transmutability/region-infer.stderr
error[E0277]: `()` cannot be safely transmuted into `W<'_>` in the defining scope of `Context`
  --> $DIR/region-infer.rs:20:5
   |
LL |     test();
   |     ^^^^ The size of `()` is smaller than the size of `W<'_>`
   |
note: required by a bound in `test`
  --> $DIR/region-infer.rs:11:12
   |
LL |   fn test<'a>()
   |      ---- required by a bound in this function
LL |   where
LL |       W<'a>: BikeshedIntrinsicFrom<
   |  ____________^
LL | |             (),
LL | |             Context,
LL | |             { Assume { alignment: true, lifetimes: true, safety: true, validity: true } },
LL | |         >,
   | |_________^ required by this bound in `test`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
